<resources>
    <string name="app_name" translatable="false">Phone Cleaner</string>
    <string name="status_bar_notification_info_overflow" translatable="false">999+</string>
    <item name="spb_default_speed" type="string" translatable="false">1.0</item>
    <item name="cpb_default_rotation_speed" type="string" translatable="false">1.0</item>
    <item name="cpb_default_sweep_speed" type="string" translatable="false">1.0</item>
    <string name="font_fontFamily_material_item" translatable="false">sans</string>
    <string name="twenty_therty" translatable="false">20/30</string>
    <string name="dddd" translatable="false">dddd</string>
    <string name="slash_zero" translatable="false">\\ 0</string>
    <string name="mb" translatable="false">MB</string>
    <string name="_nineteen_mb" translatable="false">19 MB</string>
    <string name="twenty_one_mb" translatable="false">21 MB</string>
    <string name="_seventeen_mb" translatable="false">17 MB</string>
    <string name="splash_two_hundred_half" translatable="false">\\ 250</string>
    <string name="kb" translatable="false">KB</string>



    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="scanning">Scanning…</string>
    <string name="scanning_m_of_n">Scanning %1$d/%2$d</string>
    <string name="settings_about">About</string>
    <string name="settings_basic">Basic</string>
    <string name="settings_grade">Feedback</string>
    <string name="settings_share">Share</string>
    <string name="settings_version_update">Update</string>
    <string name="short_cut_name">1 Tap Clean</string>
    <string name="slogan">Faster, smoother and quicker</string>
    <string name="software_top_text">Apps: %1$s, Occupied: %2$s</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="license">Developed by Ferdi Arda</string>
    <string name="mr_media_route_controller_pause">Pause</string>
    <string name="mr_media_route_controller_play">Play</string>
    <string name="mr_media_route_controller_settings_description">Route settings</string>
    <string name="mr_media_route_controller_stop">Stop casting</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="phone_boost">Phone Boost</string>
    <string name="battery_saver">Battery Saver</string>
    <string name="boost_notice">Some apps may reopen automatically after they have been forced to stop running.</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="category_advanced">Advanced</string>
    <string name="category_def">General</string>
    <string name="category_other">Other</string>
    <string name="clean_memory">Clean Memory</string>
    <string name="cleaned">Cleaned (%1$s)</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="drawer_close">drawer_close</string>
    <string name="drawer_open">drawer_open</string>
    <string name="empty_cache">Cache is empty.</string>
    <string name="junk_clean">Junk Clean</string>
    <string name="app_software_manage">Manage App</string>
    <string name="optimizing">Optimizing ......</string>
    <string name="cooling_cpu">Cooling CPU</string>
    <string name="freeable">Freeable</string>
    <string name="clean_junk">Clean Junk</string>
    <string name="done">DONE</string>
    <string name="cleaning_dots">Cleaning ......</string>
    <string name="suggested">Suggested</string>
    <string name="selected_hungred_mb">Selected: 100MB</string>
    <string name="currently_no_app">Currently No App Causing Overheating</string>
    <string name="more_apps">More apps</string>
    <string name="rate_five_stars">Rate 5 stars</string>
    <string name="ununistall">Uninstall</string>
    <string name="your_ram_booster">Your Ram Booster Pro</string>
    <string name="memory_booster">Memory Booster</string>
    <string name="in_develop">in Develop</string>
</resources>
