<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8ffffff"
    tools:context=".NavigationDrawerFragment_">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/userInfo"
            android:layout_width="match_parent"
            android:layout_height="106dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/home_header" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio0"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/drawer_selector_bg"
                    android:button="@null"
                    android:drawableLeft="@drawable/battery_gif"
                    android:drawablePadding="15dp"
                    android:paddingEnd="0dp"
                    android:paddingLeft="17dp"
                    android:paddingRight="0dp"
                    android:text="@string/battery_saver"
                    android:textColor="@drawable/drawer_selector_font"
                    android:textSize="21sp" />
            </RelativeLayout>

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/drawer_selector_bg"
                android:button="@null"
                android:drawableLeft="@drawable/app"
                android:drawablePadding="15dp"
                android:gravity="center_vertical|left"
                android:paddingLeft="17dp"
                android:paddingRight="0dp"
                android:text="@string/more_apps"
                android:textColor="@drawable/drawer_selector_font"
                android:textSize="21sp" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/drawer_selector_bg"
                android:button="@null"
                android:drawableLeft="@drawable/star"
                android:drawablePadding="15dp"
                android:gravity="center_vertical|left"
                android:paddingLeft="17dp"
                android:paddingRight="0dp"
                android:text="@string/rate_five_stars"
                android:textColor="@drawable/drawer_selector_font"
                android:textSize="21sp" />


        </LinearLayout>
    </LinearLayout>

</ScrollView>