<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:counter="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <include
        layout="@layout/main_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bar"/>


    <RelativeLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/header_height"
            android:background="@drawable/home_header"
            android:orientation="vertical"
            android:visibility="visible">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/maintext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textColor="@color/white"
                    android:textSize="51sp"
                    />

                <TextView
                    android:id="@+id/sufix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_toRightOf="@+id/maintext"
                    android:text="@string/mb"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_middle" />

                <TextView
                    android:id="@+id/free"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sufix"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_toRightOf="@+id/maintext"
                    android:text="@string/freeable"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_middle" />
            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/progressBar"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/header"
            android:background="?android:windowBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <fr.castorflex.android.circularprogressbar.CircularProgressBar
                android:id="@+id/progressBar2"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:indeterminate="true"
                android:visibility="gone"
                counter:cpb_colors="@array/gplus_colors" />

            <com.fchatnet.cleaner.views.RotateLoading
                android:id="@+id/rotate_loading"
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/progressBarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:singleLine="true"
                android:text="@string/scanning"
                android:textAppearance="?android:textAppearanceSmall" />
        </LinearLayout>

        <ListView
            android:id="@+id/listview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/memory_ads_container"
            android:layout_below="@+id/header"
            android:clipToPadding="false"
            android:divider="@null"
            android:dividerHeight="3dp"
            android:fadingEdge="none"
            android:fastScrollEnabled="true"
            android:fitsSystemWindows="true"
            android:focusable="true"
            android:layoutAnimation="@anim/listview_layout_animation"
            android:listSelector="@android:color/transparent"
            android:padding="12dp"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="none"
            android:visibility="gone" />

        <TextView
            android:id="@+id/empty"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/empty_cache"
            android:textAppearance="?android:textAppearanceLarge"
            android:visibility="gone" />

        <FrameLayout
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/memory_ads_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="fill_horizontal|bottom|center"

            android:visibility="visible"
            android:layout_centerHorizontal="true"
            >


        </FrameLayout>

        <LinearLayout
            android:id="@+id/bottom_lin"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/button_margin"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:visibility="visible">

            <Button
                android:id="@+id/mainbutton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/home_header"
                android:gravity="center"
                android:text="@string/clean_junk"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large" />


        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:app1="http://schemas.android.com/apk/res-auto"
        android:id="@+id/layout_container2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/backgroud_layout"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="194dp"
                android:layout_height="194dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center">

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <com.fchatnet.cleaner.views.HoloCircularProgressBar
                        android:id="@+id/clean_done_holoCircularProgressBar"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        app1:marker_progress="0.0"
                        app1:marker_visible="false"
                        app1:progress="1"
                        app1:progress_background_color="@color/circle_progress_background"
                        app1:progress_color="@color/circle_progress"
                        app1:stroke_width="6dp" />

                    <ImageView
                        android:id="@+id/clean_done_iv_bg"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center"
                        android:layout_margin="18dp"
                        android:background="@drawable/circle_floating_bg"
                        android:rotation="-30.0"
                        android:visibility="visible" />

                    <ImageView
                        android:id="@+id/clean_done_iv_done"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center"
                        android:layout_margin="42dp"
                        android:src="@drawable/ic_cleaning"
                        android:visibility="visible" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/clean_up_rocket"
                        android:layout_width="118dp"
                        android:layout_height="118dp"
                        android:layout_gravity="center" />
                </LinearLayout>
            </FrameLayout>

            <TextView
                android:id="@+id/clean_up_done_tv_notice"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/boost_notice"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:visibility="gone" />

            <FrameLayout
                android:id="@+id/clean_up_done_icon_container"
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="32dp">

                <TextView
                    android:id="@+id/clean_up_tv_done"
                    android:layout_width="wrap_content"
                    android:layout_height="54dp"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/button_done_selector"
                    android:gravity="center"
                    android:minWidth="66dp"
                    android:paddingBottom="6dp"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    android:paddingTop="6dp"
                    android:text="@string/done"
                    android:textColor="@color/phoneboost_text_top_color_white_blue"
                    android:textSize="15sp"
                    android:typeface="sans"
                    android:visibility="gone" />
            </FrameLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>