<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/phone_boost"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/ripple_list_button"
            android:gravity="center"
            android:orientation="vertical"
            >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:padding="6dp">

                <ImageView
                    android:id="@+id/main_iv_clean_up"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_gravity="center"
                    android:background="@drawable/memory_sav" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/memory_booster"
                android:textColor="@color/textcolor"
                android:textSize="15sp"
                android:typeface="monospace" />
        </LinearLayout>

        <View
            android:layout_width="0.5dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/junk_clean"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/ripple_list_button"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:padding="6dp">

                <ImageView
                    android:id="@+id/main_iv_phone_boost"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_gravity="center"
                    android:background="@drawable/junk_sav" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/junk_clean"
                android:textColor="@color/textcolor"
                android:textSize="15sp"
                android:typeface="monospace" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/app_manager"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/ripple_list_button"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:padding="6dp">

                <ImageView
                    android:id="@+id/main_iv_manage_app"
                    android:layout_width="42dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:background="@drawable/battery_sav" />
            </FrameLayout>

            <TextView
                android:id="@+id/app_manager_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/battery_saver"
                android:textColor="@color/textcolor"
                android:textSize="15sp"
                android:typeface="monospace" />
        </LinearLayout>

        <View
            android:layout_width="0.5dip"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/background_app"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/ripple_list_button"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:padding="6dp">

                <ImageView
                    android:id="@+id/main_iv_battery_saver"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_gravity="center"
                    android:background="@drawable/cooler_sav" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/cooling_cpu"
                android:textColor="@color/textcolor"
                android:textSize="15sp"
                android:typeface="monospace" />
        </LinearLayout>
    </LinearLayout>
    <!--<com.google.android.gms.ads.AdView-->
        <!--xmlns:ads="http://schemas.android.com/apk/res-auto"-->
        <!--android:id="@+id/adView"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--ads:adSize="BANNER"-->
        <!--android:layout_gravity="center"-->
        <!--ads:adUnitId="@string/bannerid">-->
    <!--</com.google.android.gms.ads.AdView>-->
</LinearLayout>