<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/home_header">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:orientation="horizontal"
        android:background="@drawable/home_header">

        <LinearLayout
            android:id="@+id/phone_boost"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/home_header"
            android:gravity="center"
            android:orientation="vertical"
            >

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:padding="6dp">

                <ImageView
                    android:id="@+id/main_iv_clean_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/cache2" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/_nineteen_mb
"
                android:textColor="@color/textcolor"
                android:textSize="15sp"
                android:typeface="monospace" />
        </LinearLayout>

        <View
            android:layout_width="0.5dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/junk_clean"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/home_header"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:padding="6dp">

                <ImageView
                    android:id="@+id/main_iv_phone_boost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/temp2" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/_nineteen_mb"
                android:textColor="@color/textcolor"
                android:textSize="15sp"
                android:typeface="monospace" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/app_manager"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/home_header"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:padding="6dp">

                <ImageView
                    android:id="@+id/main_iv_manage_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/res2" />
            </FrameLayout>

            <TextView
                android:id="@+id/app_manager_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/twenty_one_mb"
                android:textColor="@color/textcolor"
                android:textSize="15sp"
                android:typeface="monospace" />
        </LinearLayout>

        <View
            android:layout_width="0.5dip"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:background="@color/divider" />

        <LinearLayout
            android:id="@+id/background_app"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/home_header"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:padding="6dp">

                <ImageView
                    android:id="@+id/main_iv_battery_saver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/sys2" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:text="@string/_seventeen_mb"
                android:textColor="@color/textcolor"
                android:textSize="15sp"
                android:typeface="monospace" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>